<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.ualberta.cmput301.t03.user.ViewProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/userNameHint"
            android:id="@+id/viewProfileUsernameLabel"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="user_name_here"
            android:id="@+id/viewProfileUsername"
            android:layout_below="@+id/viewProfileUsernameLabel"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/emailHint"
            android:id="@+id/viewProfileEmailLabel"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/viewProfileCity"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="email_here"
            android:id="@+id/viewProfileEmail"
            android:layout_below="@+id/viewProfileEmailLabel"
            android:layout_alignParentStart="true" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/phoneNumberHint"
        android:id="@+id/viewProfilePhoneLabel"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/viewProfileEmail"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="phone_here"
            android:id="@+id/viewProfilePhone"
            android:layout_below="@+id/viewProfilePhoneLabel"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cityHint"
            android:id="@+id/viewProfileCityLabel"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/viewProfileUsername"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="city_here"
            android:id="@+id/viewProfileCity"
            android:layout_below="@+id/viewProfileCityLabel"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Inventory"
            android:id="@+id/inventoryButton"
            android:layout_below="@+id/viewProfilePhone"
            android:layout_alignParentStart="true"
            android:layout_marginTop="52dp"
            android:layout_alignParentEnd="true"
            android:nestedScrollingEnabled="false" />
    </RelativeLayout>
</FrameLayout>
