<resources>
    <string name="app_name">Trading Post</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_initialize_user">Welcome to Trading Post!</string>
    <string name="title_activity_trade_offer_compose">Compose a Trade</string>
    <string name="title_activity_trade_offer_review">Review Trade</string>
    <string name="title_activity_trade_offer_history">Trade History</string>
    <string name="title_activity_configuration">Settings</string>
    <string name="title_activity_photo_gallery_view">Photo Gallery</string>

    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">myUsername</string>

    <!--Navbar titles for drawer fragments-->
    <string name="inventoryTitle">Inventory</string>
    <string name="browseTitle">Browse</string>
    <string name="tradeTitle">Trades</string>
    <string name="friendsTitle">Friends</string>
    <string name="editProfileTitle">My Profile</string>
    <string name="topTradersTitle">Top Traders</string>

    <!--Configuration strings-->
    <string name="configurationOfflineMode">Offline Mode</string>
    <string name="configurationDownloadImages">Automatically download images</string>

    <!--Initialize user strings-->
    <string name="userNameHint">Username</string>
    <string name="createProfileMessage">Please create your profile:</string>
    <string name="cityHint">City</string>
    <string name="emailHint">Email</string>
    <string name="phoneNumberHint">Phone number</string>
    <string name="doneButtonText">Done</string>

    <!--Business logic constants-->
    <string name="elasticSearchRootUrl">http://cmput301.softwareprocess.es:8080/cmput301f15t03/</string>
    <!--<string name="elasticSearchRootUrl">http://192.168.99.100:32769/cmput301f15t03/</string>-->
    <string name="friendSearch">search</string>
    <string name="trade_tile_blank">A Trade Tile</string>
    <string name="title_activity_add_item_view">Add New Item</string>

    <string name="title_activity_edit_item_view">Edit Item</string>
    <string name="title_activity_inspect_item_view">Inspect Item</string>

    <string name="hello_world">Hello world!</string>
    <string name="editProfile">Edit Profile</string>

    <string-array name="categories_array">
        <item>Cameras</item>
        <item>Flash Photography</item>
        <item>Instant Photography</item>
        <item>Lens mounts</item>
        <item>Photographic Chemicals</item>
        <item>Photographic Shutters</item>
        <item>Optical Filters</item>
        <item>Photobooth Props</item>
        <item>Stands</item>
        <item>Photographic Films</item>
    </string-array>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="myProfileLabel">My Profile</string>
    <string name="title_activity_view_profile">View Profile</string>
    <string name="noUserNameToast">Please provide a username</string>
    <string name="userNameTakenToast">That username is taken, try again</string>
    <string name="problemWithNetworkToast">Error with network, try again later</string>
    <string name="noCityToast">Please provide a city</string>
    <string name="invalidEmailToast">Please provide a valid email address</string>
    <string name="allowable_username_characters">abcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="top_trader_offline_message">You\'re currently offline, and there\'s no data saved.</string>
    <string name="title_activity_view_inventory">Inventory</string>
    <string name="no_friends_message">Nothing to see here. Go ahead, add some friends!</string>
</resources>
