<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit_profile_button"
        android:icon="@drawable/ic_pencil"
        app:showAsAction="always"
        android:orderInCategory="10"
        android:title="@string/editProfile">
    </item>
</menu>