<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/existingSearchFilterListView"
        android:layout_gravity="center"
        android:choiceMode="singleChoice"
        tools:listitem="@android:layout/simple_list_item_1" />

    <EditText xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/addSearchFilterText"
              android:layout_gravity="center_horizontal"
              android:maxLines="1"
              android:inputType="text"
              android:hint="New Textual Filter"
              android:digits="@string/allowable_username_characters"/>
</LinearLayout>